--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="vlad.kolomysov.popularmoviesstage1" >
+    package="vlad.kolomysov.popularmoviesstage2" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".GridViewActivity"
+            android:name="vlad.kolomysov.popularmoviesstage2.GridViewActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize">
             <intent-filter>
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".DetailsViewActivity" />
+        <activity android:name="vlad.kolomysov.popularmoviesstage2.DetailsViewActivity" />
 
     </application>
 
