feat: store id movie with realm

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,13 +17,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
+
+    //for loading images
     compile 'com.squareup.picasso:picasso:2.5.2'
 
+    // for networking
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
     compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta1'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
@@ -33,9 +40,10 @@ dependencies {
     compile 'de.greenrobot:greendao:2.0.0'
 
     // butterknife
-    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.jakewharton:butterknife:8.0.1'
 
-
+    // realm libs for database
+    compile 'io.realm:realm-android:0.84.1'
 }
 
 repositories {
