feat: some fix - part2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,12 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     // for networking
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
-    compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta1'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    //compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta1'
+    compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
-    compile 'io.reactivex:rxandroid:1.0.1'
+    //compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'io.reactivex:rxandroid:1.2.0'
 
     // for database usage
     compile 'de.greenrobot:greendao:2.0.0'
