--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme" >
 
         <activity
-            android:name="vlad.kolomysov.popularmoviesstage2.GridViewActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize">
 
@@ -23,7 +23,25 @@
 
         </activity>
 
-        <activity android:name="vlad.kolomysov.popularmoviesstage2.DetailsActivity" />
+        <activity
+            android:name=".activity.MovieDetailActivity"
+            android:label="@string/title_activity_movie_detail" >
+        </activity>
+        <activity
+            android:name=".activity.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".activity.MainActivity"
+            android:theme="@style/SettingsTheme" >
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.MainActivity" />
+
+        </activity>
+        <activity
+            android:name=".activity.FavoriteMoviesActivity"
+            android:label="@string/title_activity_favorite_movies" >
+        </activity>
 
     </application>
 
